# innerarchitect

./: .dockerignore  .gitignore  .replit  ANALYTICS_DASHBOARD.md  CI_CD_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  HANDOVER_DOCUMENT.md  HIPAA_SECURITY_IMPLEMENTATION.md  MOBILE_APP_INTEGRATION.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PIPEDA_COMPLIANCE.md  PRODUCTION_SETUP.md  PROJECT_SUMMARY.md  README-git-automation.md  README.md  SECURITY_COMPLIANCE.md  SECURITY_REVIEW.md  SUMMARY.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  VIRTUAL_ENVIRONMENT_SETUP.md  api_fallback.py  app.py  app_integrator.py  app_performance.py  auth_repair.py  belief_change.py  check_db.py  communication_analyzer.py  conversation_context.py  create_screenshots.py  database.py  db_cleanup.py  db_init.py  deploy.sh  (+35 more)
.claude/: settings.local.json
inner_architect/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml  setup.cfg  setup.ps1  setup.py  setup.sh
inner_architect/app/: __init__.py  cli.py
inner_architect/app/models/: __init__.py  chat.py  nlp.py  subscription.py  user.py
inner_architect/app/nlp/: claude_client.py  conversation_context.py  nlp_exercises.py  techniques.py
inner_architect/app/routes/: admin.py  api_test.py  auth.py  chat.py  main.py
inner_architect/app/services/: ai_client_factory.py  claude_client.py
inner_architect/app/static/: manifest.json  service-worker.js
inner_architect/tests/: conftest.py
(+159 files in other folders)
