[project]
name = "inner-architect"
version = "0.1.0"
description = "A tool for cognitive reframing and emotional well-being powered by NLP techniques using Claude API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.19.1",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-dance>=7.1.0",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
    "stripe>=12.1.0",
    "werkzeug>=3.1.3",
    "sendgrid>=6.12.0",
    "reportlab>=4.4.0",
    "fpdf>=1.7.2",
    "wtforms>=3.2.1",
    "cairosvg>=2.8.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88